Fix rotating stuck on home-icon on mobile

--- a/Hapsburg/css/style.css
+++ b/Hapsburg/css/style.css
@@ -252,10 +252,6 @@ blockquote {
     margin: 100px auto 0;
     position: relative;
     width: 80px;
-    -webkit-transform: rotate(15deg);
-    -moz-transform: rotate(15deg);
-    -o-transform: rotate(15deg);
-    -ms-transform: rotate(15deg);
 }
 
 #single-page-slider {
